tests/baselines/reference/multipleExportAssignmentsInAmbientDeclaration.errors.txt
tests/cases/compiler/multipleExportAssignmentsInAmbientDeclaration.ts(4,14): error TS2300: Duplicate identifier 'export='.
tests/cases/compiler/multipleExportAssignmentsInAmbientDeclaration.ts(5,14): error TS2300: Duplicate identifier 'export='.


==== tests/cases/compiler/multipleExportAssignmentsInAmbientDeclaration.ts (2 errors) ====
    declare module "m1" {
        var a: number
        var b: number;
        export = a;
                 ~
!!! error TS2300: Duplicate identifier 'export='.
        export = b;
                 ~
!!! error TS2300: Duplicate identifier 'export='.
    }